@@ -110,7 +110,7 @@ if O.path.exists(O.path.join(O.path.join(incdirs,'cvodes'), 'cvodes.h')):
         
     if wSLU:
         setup(name='Assimulo',
-              version='1.4b2',
+              version='1.4b3',
               description='A package for solving ordinary differential equations',
               author='Claus Führer and Christian Andersson',
               author_email='claus@maths.lth.se chria@kth.se',
@@ -136,7 +136,7 @@ if O.path.exists(O.path.join(O.path.join(incdirs,'cvodes'), 'cvodes.h')):
             )
     else:
         setup(name='Assimulo',
-              version='1.4b2',
+              version='1.4b3',
               description='A package for solving ordinary differential equations',
               author='Claus Führer and Christian Andersson',
               author_email='claus@maths.lth.se chria@kth.se',
